--- a/analysis/simulation_E_S_three_tissues_new_new.Rmd
+++ b/analysis/simulation_E_S_three_tissues_new_new.Rmd
@@ -16,166 +16,61 @@ library(data.table)
 source("/project/xinhe/shengqian/cTWAS_simulation/code/simulation_help_functions.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/code/summarize_basic_plots.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/code/summarize_ctwas_plots.R")
-#load("/project2/xinhe/shared_data/multigroup_ctwas/weights/E_S_A_mapping.RData")
+#source("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/analysis/simulation_help_functions.R")
 
-plot_PIP <- function(results_dir, runtag,  simutags, LD_type, ...){
+plot_PIP_estimatedL <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".estimatedL.finemap_regions_res.RDS")
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
 
-plot_PIP_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+plot_PIP_nonSNPpip <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, "_newpack.finemap_regions_res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".nonSNPpip.finemap_regions_res.RDS")
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
 
-plot_PIP_true_parameter <- function(results_dir, runtag,  simutags, LD_type, ...){
+plot_gene_PIP_estimatedL <- function(configtag, runtag,  simutags, LD_type, mapping_table, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.res.RDS")
-   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".estimatedL.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_multi_omics(phenofs, susieIfs, mapping_table, ...) 
    return(f1)
 }
 
-plot_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
+plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, mapping_table, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.true.effects.res.RDS")
-   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_PIP_true_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.estimated.effects.res.RDS")
-   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_PIP_estimated_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.true.effects.res.RDS")
-   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_PIP_estimated_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.estimated.effects.res.RDS")
-   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_PIP_merged <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type,".finemap_merged_regions.res.RDS")
-   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP <- function(configtag, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP_estimated_L <- function(configtag, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, "_newpack.finemap_regions_res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP_true_parameter <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP_true_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.true.effects.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP_true_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.true.parameter.estimated.effects.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP_estimated_parameter_true_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.true.effects.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_combined_PIP_estimated_parameter_estimated_L <- function(results_dir, runtag,  simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.estimated.parameter.estimated.effects.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
-   return(f1)
-}
-
-plot_PIP_combined_merged <- function(configtag, runtag, simutags, LD_type, ...){
-   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_merged_regions.res.RDS")
-   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".nonSNPpip.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_multi_omics(phenofs, susieIfs, mapping_table, ...) 
    return(f1)
 }
 ```
 
-### Get parameters
-
+### Compare number of screen regions
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_three_tissues_expression_splicing//"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_three_tissues_expression_splicing/"
+runtag = "E_S_three_tissues"
+simutags <- paste(1, 1:5, sep = "-")
+num_estimatedL <- c()
+for(simutag in simutags){
+    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".estimatedL.screened_region_data.RDS"))
+    num_estimatedL <- c(num_estimatedL,length(regions))
+}
+num_nonSNPpip <- c()
+for(simutag in simutags){
+    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".nonSNPpip.screened_region_data.RDS"))
+    num_nonSNPpip <- c(num_nonSNPpip,length(regions))
+}
+data.frame(cbind(simutags,num_estimatedL,num_nonSNPpip))
+```
+
+
+```{r}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_three_tissues_expression_splicing/"
 runtag = "E_S_three_tissues"
 simutags <- paste(1, 1:5, sep = "-")
 param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
-```
-
-
-### Compare number of screen regions
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_three_tissues_expression_splicing/"
-runtag = "E_S_three_tissues"
-simutags <- paste(1, 1:5, sep = "-")
-for(simutag in simutags){
-    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".estimatedL.screened_region_data.RDS"))
-    print(length(regions))
-}
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_three_tissues_expression_splicing/"
-runtag = "E_S_three_tissues"
-simutags <- paste(1, 1:5, sep = "-")
-for(simutag in simutags){
-    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".nonSNPpip.screened_region_data.RDS"))
-    print(length(regions))
-}
-```
-
-```{r}
-f1 <- pip_partition_across_tissue(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
-f1
-```
-
-### Number of causal genes detected (GTEX LD)
-```{r, echo=FALSE, eval=FALSE}
-check_n_detected_multiomics(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
-```
-
-### Number of causal genes detected (UKBB LD)
-```{r, echo=FALSE, eval=FALSE}
-check_n_detected_multiomics(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
 ```
 
 ### Estimated Prior Inclusion Probability and PVE (UKBB LD)
@@ -183,7 +78,7 @@ check_n_detected_multiomics(results_dir, runtag, simutags, "UKBBLD", PIP_thresho
 par(mfrow = c(1, 3))
 y1 <- param_UKBB_df$`prior_Liver|expression`
 y2 <- param_UKBB_df$`prior_Liver|splicing`
-y3 <- param_UKBB_df$`prior_var_Adipose_Subcutaneous|expression`
+y3 <- param_UKBB_df$`prior_Adipose_Subcutaneous|expression`
 y4 <- param_UKBB_df$`prior_Adipose_Subcutaneous|splicing`
 y5 <- param_UKBB_df$`prior_Lung|expression`
 y6 <- param_UKBB_df$`prior_Lung|splicing`
@@ -196,7 +91,7 @@ y2 <- param_UKBB_df$`pve_Liver|splicing`
 y3 <- param_UKBB_df$`pve_Adipose_Subcutaneous|expression`
 y4 <- param_UKBB_df$`pve_Adipose_Subcutaneous|splicing`
 y5 <- param_UKBB_df$`pve_Lung|expression`
-y6 <- param_UKBB_df$`prior_Lung|splicing`
+y6 <- param_UKBB_df$`pve_Lung|splicing`
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.06),ylab="PVE", main="PVE")
@@ -212,55 +107,18 @@ est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
 
-### PIP attribution among tissues by QTL types (UKBBLD)
-```{r, echo=FALSE, fig.width= 8, fig.height= 4, warning=FALSE, eval=FALSE}
-f1 <- pip_partition_across_tissue_by_QTLtype(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8, "eQTL","Expression")
-f2 <- pip_partition_across_tissue_by_QTLtype(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8, "sQTL","Splicing")
-gridExtra::grid.arrange(f1, f2, ncol=2)
-```
 
-### PIP Calibration Plot of molecular traits - Estimated Parameter (filter out cs index 0)
+### PIP Calibration Plot of expression traits
 ```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "L=5")
-f2 <- plot_PIP_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
+f1 <- plot_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
+f2 <- plot_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
 ```
 
-### PIP Calibration Plot of molecular traits - Estimated Parameter (filter out cs index 0)
+
 ```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_combined_PIP(results_dir, runtag, simutags, "UKBBLD", main = "L=5")
-f2 <- plot_combined_PIP_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
+mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
+f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", mapping_table, main = "Estimated L")
+f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", mapping_table, main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
-```
-
-### PIP Calibration Plot of molecular traits - Estimated Parameter (filter out cs index 0)
-```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Default L")
-f2 <- plot_PIP_estimated_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter True L")
-f3 <- plot_PIP_estimated_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Estimated L")
-gridExtra::grid.arrange(f1, f2, f3, ncol = 3)
-```
-
-### PIP Calibration Plot of molecular traits - True Parameter (filter out cs index 0)
-```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_true_parameter(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Default L")
-f2 <- plot_PIP_true_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter True L")
-f3 <- plot_PIP_true_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Estimated L")
-gridExtra::grid.arrange(f1, f2, f3, ncol = 3)
-```
-
-### PIP Calibration Plot of gene level PIP - Estimated Parameter (filter out cs index 0)
-```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_combined_PIP(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Default L")
-f2 <- plot_combined_PIP_estimated_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter True L")
-f3 <- plot_combined_PIP_estimated_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "Estimated Parameter Estimated L")
-gridExtra::grid.arrange(f1, f2, f3, ncol = 3)
-```
-
-### PIP Calibration Plot of gene level PIP - True Parameter (filter out cs index 0)
-```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_combined_PIP_true_parameter(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Default L")
-f2 <- plot_combined_PIP_true_parameter_true_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter True L")
-f3 <- plot_combined_PIP_true_parameter_estimated_L(results_dir, runtag, simutags, "UKBBLD", main = "True Parameter Estimated L")
-gridExtra::grid.arrange(f1, f2, f3, ncol = 3)
 ```
