--- a/analysis/CopyOffour_expression_traits_simulations.Rmd
+++ b/analysis/CopyOffour_expression_traits_simulations.Rmd
@@ -33,15 +33,15 @@ plot_PIP_nonSNPpip <- function(results_dir, runtag,  simutags, LD_type, ...){
 
 plot_gene_PIP_estimatedL <- function(configtag, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
-   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".estimatedL.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_multi_tissues(phenofs, susieIfs, ...) 
    return(f1)
 }
 
 plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
-   f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".nonSNPpip.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_multi_tissues(phenofs, susieIfs, ...) 
    return(f1)
 }
 ```
@@ -51,7 +51,7 @@ plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, ...){
 
 
 ```{r}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation_old/simulation_four_tissues_expression_old/"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
 runtag = "four_tissues"
 simutags <- paste(1, 1:5, sep = "-")
 param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
@@ -63,72 +63,54 @@ results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissue
 runtag = "four_tissues"
 simutags <- paste(1, 1:5, sep = "-")
 for(simutag in simutags){
-    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".screened_region_data.RDS"))
+    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".estimatedL.screened_region_data.RDS"))
     print(length(regions))
 }
 ```
 
-### Number of causal genes detected (GTEX LD)
-```{r echo=FALSE}
-check_n_detected_multitissues(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
+runtag = "four_tissues"
+simutags <- paste(1, 1:5, sep = "-")
+for(simutag in simutags){
+    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".nonSNPpip.screened_region_data.RDS"))
+    print(length(regions))
+}
 ```
 
 ### Number of causal genes detected (UKBB LD)
 ```{r echo=FALSE}
-check_n_detected_multitissues(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
+check_power(results_dir, runtag, simutags, "UKBBLD", 'estimatedL', PIP_threshold = 0.8)
 ```
 
-### Estimated Prior Inclusion Probability and PVE (GTEX LD)
-`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
-par(mfrow = c(1, 3))
-y1 <- param_GTEX_df$`prior_eQTL|Liver`
-y2 <- param_GTEX_df$`prior_eQTL|Adipose`
-y3 <- param_GTEX_df$`prior_eQTL|Lung`
-y4 <- param_GTEX_df$`prior_eQTL|Stomach`
-truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0))
-est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y3), cbind(4,y4))
-plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
-
-y1 <- param_GTEX_df$`pve_eQTL|Liver`
-y2 <- param_GTEX_df$`pve_eQTL|Adipose`
-y3 <- param_GTEX_df$`pve_eQTL|Lung`
-y4 <- param_GTEX_df$`pve_eQTL|Stomach`
-truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0))
-est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y3), cbind(4,y4))
-plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,0.06),ylab="PVE", main="PVE")
-
-y1 <- param_GTEX_df$`enrichment_eQTL|Liver`
-y2 <- param_GTEX_df$`enrichment_eQTL|Adipose`
-y3 <- param_GTEX_df$`enrichment_eQTL|Lung`
-y4 <- param_GTEX_df$`enrichment_eQTL|Stomach`
-truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0))
-est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y3), cbind(4,y4))
-plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
+```{r echo=FALSE}
+check_power(results_dir, runtag, simutags, "UKBBLD", 'nonSNPpip', PIP_threshold = 0.8)
 ```
 
 ### Estimated Prior Inclusion Probability and PVE (UKBB LD)
 `````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
-y1 <- param_UKBB_df$`prior_eQTL|Liver`
-y2 <- param_UKBB_df$`prior_eQTL|Adipose`
-y3 <- param_UKBB_df$`prior_eQTL|Lung`
-y4 <- param_UKBB_df$`prior_eQTL|Stomach`
+y1 <- param_UKBB_df$`prior_Liver|eQTL`
+y2 <- param_UKBB_df$`pve_Adipose_Subcutaneous|eQTL`
+y3 <- param_UKBB_df$`prior_Lung|eQTL`
+y4 <- param_UKBB_df$`prior_Stomach|eQTL`
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y3), cbind(4,y4))
 plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
 
-y1 <- param_UKBB_df$`pve_eQTL|Liver`
-y2 <- param_UKBB_df$`pve_eQTL|Adipose`
-y3 <- param_UKBB_df$`pve_eQTL|Lung`
-y4 <- param_UKBB_df$`pve_eQTL|Stomach`
+y1 <- param_UKBB_df$`pve_Liver|eQTL`
+y2 <- param_UKBB_df$`pve_Adipose_Subcutaneous|eQTL`
+y3 <- param_UKBB_df$`pve_Lung|eQTL`
+y4 <- param_UKBB_df$`prior_Stomach|eQTL`
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y3), cbind(4,y4))
 plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,0.06),ylab="PVE", main="PVE")
 
-y1 <- param_UKBB_df$`enrichment_eQTL|Liver`
-y2 <- param_UKBB_df$`enrichment_eQTL|Adipose`
-y3 <- param_UKBB_df$`enrichment_eQTL|Lung`
-y4 <- param_UKBB_df$`enrichment_eQTL|Stomach`
+y1 <- param_UKBB_df$`enrichment_Liver|eQTL`
+y2 <- param_UKBB_df$`enrichment_Adipose_Subcutaneous|eQTL`
+y3 <- param_UKBB_df$`enrichment_Lung|eQTL`
+y4 <- param_UKBB_df$`enrichment_Stomach|eQTL`
 truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y3), cbind(4,y4))
 plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
@@ -158,7 +140,11 @@ gridExtra::grid.arrange(f1, f2, ncol = 2)
 
 
 
-
+```{r, fig.width= 12, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
+f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
+gridExtra::grid.arrange(f1, f2, ncol = 2)
+```
 
 
 
