--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -221,7 +221,7 @@ gridExtra::grid.arrange(f1, f2, ncol = 2)
 ```
 
 ### PIP Calibration Plot of genes
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
 f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", mapping_table, main = "Estimated L")
 f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", mapping_table, main = "nonSNPpip")
