--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -103,14 +103,14 @@ plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, ...){
 ```
 
 ### PIP Calibration Plot of molecular traits
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 f1 <- plot_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
 ```
 
 ### PIP Calibration Plot of genes
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
@@ -214,7 +214,7 @@ plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, mappi
 ```
 
 ### PIP Calibration Plot of molecular traits
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 f1 <- plot_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
@@ -328,14 +328,14 @@ plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, ...){
 ```
 
 ### PIP Calibration Plot of molecular traits
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 f1 <- plot_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
 ```
 
 ### PIP Calibration Plot of genes
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
