--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -74,13 +74,14 @@ Package V2.0
   * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro.html)
   * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro_summary.html)
   
+# Deciding weights  
   
   Comparing results from Munro weights & predictdb weights
   
-  * [LDL + IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V2](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs.html)
-  * [LDL + IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs_thin1.html)
-  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V2](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update.html)
+  * [IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs_thin1.html)
   * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
+  * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / all 8 weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits.html)
+  
   
 # LDL examples
 
