--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -297,6 +297,122 @@ truth <- rbind(c(1,36),c(2,36),c(3,36),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
 plot_par_7(truth,est,xlabels = c("Artery","Spleen","Skin","Lung","Adipose","Pancreas","Heart"),ylim=c(0,250),ylab= "Enrichment")
 ```
+
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+plot_PIP_estimatedL <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".estimatedL.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_PIP_nonSNPpip <- function(results_dir, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".nonSNPpip.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_gene_PIP_estimatedL <- function(configtag, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".estimatedL.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_multi_tissues(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_gene_PIP_nonSNPpip <- function(configtag, runtag,  simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".nonSNPpip.finemap_regions_res.RDS")
+   f1 <- caliPIP_plot_multi_tissues(phenofs, susieIfs, ...) 
+   return(f1)
+}
+```
+
+### PIP Calibration Plot of molecular traits
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+f1 <- plot_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
+f2 <- plot_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
+gridExtra::grid.arrange(f1, f2, ncol = 2)
+```
+
+### PIP Calibration Plot of genes
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
+f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
+gridExtra::grid.arrange(f1, f2, ncol = 2)
+```
+
+
+## Simulation 4: seven tissues uncorrelated tissues expression trait
+A simulation of seven correlated tissues is conducted to evaluate cTWAS performance (parameter estimation, PIP calibration ...). Seven tissues used in this simulation are Artery Aorta, Spleen, Skin (not sun exposed suprapubic), Lung, Adipose Subcutaneous, Pancreas, Heart Artial Appendage. Pairwise correlation of gene expression are with 0.6-0.8. The first three tissues are set to be causal, each with 3% PVE, 0.9% $\pi$ for causal tissues, 0% PVE, 0% $\pi$ for non-causal tissues and 30% PVE, 2.5e-4 $\pi$ for SNP.
+
+### Comparing number of regions screened
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_seven_uncorrelated_tissues_expression/"
+runtag = "7uncorr"
+simutags <- paste(1, 1:5, sep = "-")
+num_estimatedL <- c()
+for(simutag in simutags){
+    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".estimatedL.screened_region_data.RDS"))
+    num_estimatedL <- c(num_estimatedL,length(regions))
+}
+num_nonSNPpip <- c()
+for(simutag in simutags){
+    regions <- readRDS(paste0(results_dir,runtag,"_simu",simutag,"_","UKBBLD",".nonSNPpip.screened_region_data.RDS"))
+    num_nonSNPpip <- c(num_nonSNPpip,length(regions))
+}
+data.frame(cbind(simutags,num_estimatedL,num_nonSNPpip))
+```
+
+### Number of causal genes detected
+```{r echo=FALSE}
+check_power(results_dir, runtag, simutags, "UKBBLD", 'estimatedL', PIP_threshold = 0.8)
+```
+
+```{r echo=FALSE}
+check_power(results_dir, runtag, simutags, "UKBBLD", 'nonSNPpip', PIP_threshold = 0.8)
+```
+
+### Estimated parameters
+```{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
+par(mfrow = c(1, 3))
+y1 <- param_UKBB_df$`prior_Liver|expression`
+y2 <- param_UKBB_df$`prior_Lung|expression`
+y3 <- param_UKBB_df$`prior_Whole_Blood|expression`
+y4 <- param_UKBB_df$`prior_Adipose_Subcutaneous|expression`
+y5 <- param_UKBB_df$`prior_Artery_Tibial|expression`
+y6 <- param_UKBB_df$`prior_Heart_Left_Ventricle|expression`
+y7 <- param_UKBB_df$`prior_Stomach|expression`
+truth <- rbind(c(1,0.009),c(2,0.009),c(3,0.009),c(4,0),c(5,0),c(6,0),c(7,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
+plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"), ylim=c(0,0.025),ylab="Prior inclusion")
+
+y1 <- param_UKBB_df$`pve_Liver|expression`
+y2 <- param_UKBB_df$`pve_Lung|expression`
+y3 <- param_UKBB_df$`pve_Whole_Blood|expression`
+y4 <- param_UKBB_df$`pve_Adipose_Subcutaneous|expression`
+y5 <- param_UKBB_df$`pve_Artery_Tibial|expression`
+y6 <- param_UKBB_df$`pve_Heart_Left_Ventricle|expression`
+y7 <- param_UKBB_df$`size_Stomach|expression`
+
+truth <- rbind(c(1,0.03),c(2,0.03),c(3,0.03),c(4,0),c(5,0),c(6,0),c(7,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
+plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"), ylim=c(0,0.06),ylab="PVE")
+
+y1 <- param_UKBB_df$`enrichment_Liver|expression`
+y2 <- param_UKBB_df$`enrichment_Lung|expression`
+y3 <- param_UKBB_df$`enrichment_Whole_Blood|expression`
+y4 <- param_UKBB_df$`enrichment_Adipose_Subcutaneous|expression`
+y5 <- param_UKBB_df$`enrichment_Artery_Tibial|expression`
+y6 <- param_UKBB_df$`enrichment_Heart_Left_Ventricle|expression`
+y7 <- param_UKBB_df$`enrichment_Stomach|expression`
+  
+truth <- rbind(c(1,36),c(2,36),c(3,36),c(4,0),c(5,0),c(6,0),c(7,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
+plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"), ylim=c(0,250),ylab= "Enrichment")
+```
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 plot_PIP_estimatedL <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
